Closed
Bug 643376
Opened 15 years ago
Closed 15 years ago
TI: [infer failure] Missing type in object #49:14:Object SECTION: float
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: crash, testcase)
The following test case (run with "-n -m -a") crashes on TI tip (tested on 64
bit):
function outer_func(x)
{
var y = "inner";
new TestCase( SECTION, { SECTION: ++y }.SECTION[y.SECTION(this, "acc4", {})][ x < SECTION], 2222, x);
}
outer_func(1111);
| Reporter | ||
Comment 1•15 years ago
|
||
I made a mistake with the test case reduction here, you still need the js reftests shell.js before the test case. Using ./js -n -m -a -f shell.js -f testcase.js should work.
Comment 2•15 years ago
|
||
We were looking at the known type tags of locals/etc. instead of type sets and could miss JSOP_INC* overflows that produced a double value.
http://hg.mozilla.org/projects/jaegermonkey/rev/879307276683
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 3•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/recompile/bug643376.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•