[INFER] Use type sets instead of known pushed types when looking for static overflows, bug 643376.